# ZXTracker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: analyze.rs  daemon.rs  db.rs  desktop.rs  main.rs  render.rs
src/idle/: linux.rs  mod.rs  windows.rs
src/ipc/: mod.rs  unix.rs  windows.rs
src/tracker/: mod.rs  niri.rs  windows.rs
