[package]
name = "zx_tracker"
version = "0.3.0"
edition = "2021"
description = "Cross-platform window focus time tracker for niri Wayland compositor"
repository = "https://github.com/lildengzi/ZXTracker"
license = "Apache-2.0"
keywords = ["niri", "wayland", "tracker", "productivity", "time"]
categories = ["command-line-utilities"]

[[bin]]
name = "zxtracker"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ctrlc = "3"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
dirs = "5"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
] }
